--- a/web_0110/web1.html
+++ b/web_0110/web1.html
@@ -17,8 +17,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-left: 300px;
-            margin-right: 300px;
             height: 20px;
             padding: 20px 100px 20px 100px;
             border: 1px solid;
@@ -30,10 +28,10 @@
             text-align: center;
         }
         div {
-            width: 450px;
+            width: 700px;
             padding: 20px 300px 20px 300px;
             border-radius: 20px;
-            margin: 50px 200px 50px 200px;
+            margin: 50px auto;
             background-color: rgb(113, 89, 87);
         }
         p{
