--- a/web_2110/home.html
+++ b/web_2110/home.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-        <section class="cabecalho_img">
+        <section class="cabecalho">
             <img id="logo" src="img/logo.webp" alt="logo confeitaria">
+            <p id="nome">Borcelle Confeitaria</p>
         </section>
         <nav>
            <p>Home</p>
@@ -19,8 +20,10 @@
         </nav>
     </header>
     <main>
+        </section>
         <section class="main_description">
-            <p>Bem-vindo(a) ao nosso site!</p>
+            <p id="titulo">Bem-vindo(a) ao nosso site!</p>
+            <p id="descricao">Nós somos à Borcelle Confeitaria, onde a paixão pela doce arte da confeitaria se transforma em experiências únicas! Nossa missão é criar delícias irresistíveis, feitas com ingredientes frescos e de alta qualidade. Cada produto é elaborado com carinho, desde os clássicos até as criações exclusivas, para adoçar seus momentos especiais. Venha descobrir o sabor da tradição e da inovação em cada pedaço!</p>
         </section>
         <section class="main_img">
             <img id="conf_foto" src="img/img1_conf.jpg" alt="foto confeitaria">
