--- a/web_2110/home.html
+++ b/web_2110/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_ho.css">
 </head>
 <body>
     <header>
@@ -13,10 +13,10 @@
             <p id="nome">Borcelle Confeitaria</p>
         </section>
         <nav>
-           <p>Home</p>
-           <p>História</p>
-           <p>Galeria</p>
-           <p>Contato</p>
+           <a href="home.html"><p>Home</p></a>
+           <a href="historia.html"><p>História</p></a>
+           <a href="galeria.html"><p>Galeria</p></a>
+           <a href="contato.html"><p>Contato</p></a>
         </nav>
     </header>
     <main>
@@ -38,9 +38,9 @@
             <p>E-mail: contato@borcelleconfeitaria.com.br</p>
         </section>
         <section class="icones_redes">
-            <img id="icone_rede" src="./img/instagram.png" alt="logo instagram">
-            <img id="icone_rede" src="./img/youtube.png" alt="logo youtube">
-            <img id="icone_rede" src="./img/facebook.png" alt="logo facebook">
+            <a href="https://www.instagram.com"><img id="icone_rede" src="./img/instagram.png" alt="logo instagram"></a>
+            <a href="https://www.youtube.com"><img id="icone_rede" src="./img/youtube.png" alt="logo youtube"></a>
+            <a href="www.facebook.com/"><img id="icone_rede" src="./img/facebook.png" alt="logo facebook"></a>
         </section>
     </footer>
 </body>
