--- a/web_2110/contato.html
+++ b/web_2110/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Contato - Borcelle Confeitaria</title>
     <link rel="stylesheet" href="css/style_co.css">
 </head>
 <body>
