--- a/web_2110/galeria.html
+++ b/web_2110/galeria.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria - Borcelle Confeitaria</title>
     <link rel="stylesheet" href="css/style_ga.css">
+    <link rel="stylesheet" href="lightbox2-2.11.4/dist/css/lightbox.css">
+    <script src="lightbox2-2.11.4/dist/js/lightbox.js"></script>
+    <script src="lightbox2-2.11.4/dist/js/lightbox-plus-jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -24,16 +27,16 @@
             <p id="titulo">Galeria</p>
         </section>
         <section class="main_description">
-            <img id="fotogaleria" src="img/foto1.jpeg" alt="">
-            <img id="fotogaleria" src="img/foto2.jpg" alt="">
-            <img id="fotogaleria" src="img/foto3.webp" alt="">
-            <img id="fotogaleria" src="img/foto4.webp" alt="">
-            <img id="fotogaleria" src="img/foto5.webp" alt="">
-            <img id="fotogaleria" src="img/foto6.jpg" alt="">
-            <img id="fotogaleria" src="img/foto7.jpg" alt="">
-            <img id="fotogaleria" src="img/foto8.jpg" alt="">
-            <img id="fotogaleria" src="img/foto9.jpeg" alt="">
-            <img id="fotogaleria" src="img/foto10.jpg" alt="">
+            <a href="img/foto1.jpeg" data-lightbox="fotos" data-title="Doces finos para Casamento"><img id="fotogaleria" src="img/foto1.jpeg"></a>
+            <a href="img/foto2.jpeg" data-lightbox="fotos" data-title="Bolo Decorado de Framboesa"><img id="fotogaleria" src="img/foto2.jpg"></a>
+            <a href="img/foto3.jpeg" data-lightbox="fotos" data-title="Bolos da Vitrine"><img id="fotogaleria" src="img/foto3.webp"></a>
+            <a href="img/foto4.jpeg" data-lightbox="fotos" data-title="Cupcakes"><img id="fotogaleria" src="img/foto4.webp"></a>
+            <a href="img/foto5.jpeg" data-lightbox="fotos" data-title="Tortinhas de Framboesa e Banana"><img id="fotogaleria" src="img/foto5.webp"></a>
+            <a href="img/foto6.jpeg" data-lightbox="fotos" data-title="Mini Sobremesas de Festa"><img id="fotogaleria" src="img/foto6.jpg"></a>
+            <a href="img/foto7.jpeg" data-lightbox="fotos" data-title="Doces de Festa"><img id="fotogaleria" src="img/foto7.jpg"></a>
+            <a href="img/foto8.jpeg" data-lightbox="fotos" data-title="Bolo Decorado de Morango"><img id="fotogaleria" src="img/foto8.jpg"></a>
+            <a href="img/foto9.jpeg" data-lightbox="fotos" data-title="Doces Finos de Moranfo"><img id="fotogaleria" src="img/foto9.jpeg"></a>
+            <a href="img/foto10.jpeg" data-lightbox="fotos" data-title="Bolos e Tortas"><img id="fotogaleria" src="img/foto10.jpg"></a>
         </section>
     </main>
     <footer>
