--- a/web_2910/contato.html
+++ b/web_2910/contato.html
@@ -51,9 +51,9 @@
             <p>E-mail: contato@borcelleconfeitaria.com.br</p>
         </section>
         <section class="icones_redes">
-            <a href="https://www.instagram.com"><img id="icone_rede" src="img/instagram.png" alt="logo instagram"></a>
-            <a href="https://www.youtube.com"><img id="icone_rede" src="img/youtube.png" alt="logo youtube"></a>
-            <a href="www.facebook.com/"><img id="icone_rede" src="img/facebook.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com"><img id="icone_rede" src="./img/instagram.png" alt="logo instagram"></a>
+            <a href="https://www.youtube.com"><img id="icone_rede" src="./img/youtube.png" alt="logo youtube"></a>
+            <a href="www.facebook.com/"><img id="icone_rede" src="./img/facebook.png" alt="logo facebook"></a>
         </section>
     </footer>
 </body>
