--- a/web_1211/index.html
+++ b/web_1211/index.html
@@ -10,3 +10,12 @@
         <h1>Media Query</h1>
     </body>
 </html>
+
+/*
+1 - pesquisar padrões de tamanho 
+    - celular
+    - tablet
+min e max largura
+
+2 - site com flexbox
+    - aplicar no css um estilo diferente
