--- a/web_2110/historia.html
+++ b/web_2110/historia.html
@@ -24,7 +24,7 @@
  
     <main>
         </section>
-        <section class="main_description">
+        <section class="description-historia">
             <p id="titulo">Nossa História</p>
             <p id="descricao">Desde que decidi abrir a Borcelle Confeitaria, meu coração bateu mais forte com a ideia de criar um espaço que oferecesse mais do que doces e bolos — queria proporcionar momentos especiais. Cada receita é uma parte da minha história, uma combinação de técnicas que aprendi ao longo dos anos e inspirações de sabores que experimentava e queria compartilhar com o mundo.</p>
             <p id="descricao">Nos primeiros dias, Borcelle era apenas uma ideia em minha mente e algumas receitas rabiscadas em cadernos antigos. Mas sabia que poderia ser mais: um lugar onde as pessoas pudessem não apenas provar, mas sentir. Assim, escolhi cuidadosamente os ingredientes e refinei cada detalhe para trazer autenticidade em cada mordida. Os bolos e doces não seriam apenas sobremesas, mas criações feitas com paixão e dedicação.</p>
