--- a/web_2110/home.html
+++ b/web_2110/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Borcelle Confeitaria</title>
-    <link rel="stylesheet" href="css/style_ho.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
     <main>
         </section>
         <section class="main_description">
-            <p id="titulo">Bem-vindo(a) ao nosso site!</p>
+            <p id="titulo-main">Bem-vindo(a) ao nosso site!</p>
             <p id="descricao">Nós somos à Borcelle Confeitaria, onde a paixão pela doce arte da confeitaria se transforma em experiências únicas! Nossa missão é criar delícias irresistíveis, feitas com ingredientes frescos e de alta qualidade. Cada produto é elaborado com carinho, desde os clássicos até as criações exclusivas, para adoçar seus momentos especiais. Venha descobrir o sabor da tradição e da inovação em cada pedaço!</p>
         </section>
         <section class="main_img">
