--- a/web_2110/contato.html
+++ b/web_2110/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Borcelle Confeitaria</title>
-    <link rel="stylesheet" href="css/style_co.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
