--- a/web_2110/galeria.html
+++ b/web_2110/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria - Borcelle Confeitaria</title>
-    <link rel="stylesheet" href="css/style_ga.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="lightbox2-2.11.4/dist/css/lightbox.css">
     <script src="lightbox2-2.11.4/dist/js/lightbox.js"></script>
     <script src="lightbox2-2.11.4/dist/js/lightbox-plus-jquery.min.js"></script>
@@ -26,7 +26,7 @@
         <section>
             <p id="titulo">Galeria</p>
         </section>
-        <section class="main_description">
+        <section class="main-fotos">
             <a href="img/foto1.jpeg" data-lightbox="fotos" data-title="Doces finos para Casamento"><img id="fotogaleria" src="img/foto1.jpeg"></a>
             <a href="img/foto2.jpeg" data-lightbox="fotos" data-title="Bolo Decorado de Framboesa"><img id="fotogaleria" src="img/foto2.jpg"></a>
             <a href="img/foto3.jpeg" data-lightbox="fotos" data-title="Bolos da Vitrine"><img id="fotogaleria" src="img/foto3.webp"></a>
