--- a/web_2110/galeria.html
+++ b/web_2110/galeria.html
@@ -23,8 +23,9 @@
         </nav>
     </header>
     <main>
+        <div class="galeria">
         <section>
-            <p id="titulo">Galeria</p>
+            <p id="titulo-galery">Galeria</p>
         </section>
         <section class="main-fotos">
             <a href="img/foto1.jpeg" data-lightbox="fotos" data-title="Doces finos para Casamento"><img id="fotogaleria" src="img/foto1.jpeg"></a>
@@ -38,6 +39,7 @@
             <a href="img/foto9.jpeg" data-lightbox="fotos" data-title="Doces Finos de Moranfo"><img id="fotogaleria" src="img/foto9.jpeg"></a>
             <a href="img/foto10.jpeg" data-lightbox="fotos" data-title="Bolos e Tortas"><img id="fotogaleria" src="img/foto10.jpg"></a>
         </section>
+        </div>
     </main>
     <footer>
         <section class="contato">
