--- a/web_2110/historia.html
+++ b/web_2110/historia.html
@@ -16,7 +16,7 @@
     </header>
         <span id="botao-menu" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         <nav id="itens">
-           <a href="home.htm<p>l">Home</p></a>
+           <a href="home.html">Home</p></a>
            <a href="historia.html"><p></p>História</p></a>
            <a href="galeria.html"><p>Galeria</p></a>
            <a href="contato.html"><p>Contato</p></a>
