--- a/web_2110/home.html
+++ b/web_2110/home.html
@@ -22,7 +22,7 @@
     <main>
         </section>
         <section class="main_description">
-            <p id="titulo-main">Bem-vindo(a) ao nosso site!</p>
+            <p id="titulo">Bem-vindo(a) ao nosso site!</p>
             <p id="descricao">Nós somos à Borcelle Confeitaria, onde a paixão pela doce arte da confeitaria se transforma em experiências únicas! Nossa missão é criar delícias irresistíveis, feitas com ingredientes frescos e de alta qualidade. Cada produto é elaborado com carinho, desde os clássicos até as criações exclusivas, para adoçar seus momentos especiais. Venha descobrir o sabor da tradição e da inovação em cada pedaço!</p>
         </section>
         <section class="main_img">
