--- a/web_2110/home.html
+++ b/web_2110/home.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Borcelle Confeitaria</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+
 </head>
 <body>
     <header>
@@ -12,7 +14,8 @@
             <img id="logo" src="img/logo.webp" alt="logo confeitaria">
             <p id="nome">Borcelle Confeitaria</p>
         </section>
-        <nav>
+        <span id="botao-menu" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <nav id="itens">
            <a href="home.html"><p>Home</p></a>
            <a href="historia.html"><p>História</p></a>
            <a href="galeria.html"><p>Galeria</p></a>
@@ -43,5 +46,16 @@
             <a href="www.facebook.com/"><img id="icone_rede" src="./img/facebook.png" alt="logo facebook"></a>
         </section>
     </footer>
+    <script>
+        function clickMenu() {
+            var itens = document.getElementById('itens'); // Ensure you're selecting the correct element
+
+            if (itens.style.display === 'block'){
+                itens.style.display = 'none';
+            } else {
+                itens.style.display = 'block';
+            }
+        }
+    </script>
 </body>
 </html>
